# cigsegy

./: .gitignore  Attributions.md  CMakeLists.txt  README.md  setup.py
python/: CMakeLists.txt  PySegy.cpp  __init__.py  cigsegy.pyi  setup.py  tools.py
src/: segy.cpp
src/include/: segy.h
tools/: CMakeLists.txt  SEGYCreate.cpp  SEGYRead.cpp
